--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
     "@payloadcms/richtext-slate": "^1.0.0",
     "@stripe/react-stripe-js": "^1.16.3",
     "@stripe/stripe-js": "^1.46.0",
+    "@types/mongodb": "^4.0.7",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "escape-html": "^1.0.3",
     "express": "^4.19.2",
+    "mongodb": "^6.7.0",
     "next": "13.5.2",
     "payload": "^2.0.7",
     "payload-admin-bar": "^1.0.6",
+    "punycode": "^2.3.1",
     "qs": "6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
